--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
 
    <!--=============== CSS ===============-->
-   <link rel="stylesheet" href="assets/css/styles.css" />
+   <link rel="stylesheet" href="assets/css/style.css" />
 
    <title>Demo task</title>
 </head>
